# tarp

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  start.aqua
notebooks/: 00.extract.non_amr.ipynb  00.train_val_test.ipynb  02.extract_schema.ipynb  04.amr_to_binary.ipynb  06.extract_card.ipynb  index.ipynb
references/reports/notes/: 20251118.md  20251217.md
src/tarp/: app.py  config.py  protein.py
src/tarp/functional/fft/: convolution.py
src/tarp/model/backbone/: __init__.py
src/tarp/model/backbone/pretrained/: dnabert2.py  esm1b.py
src/tarp/model/backbone/untrained/: hyena.py  lstm.py  mamba.py  transformer.py
src/tarp/model/layers/pooling/: learned.py  reductions.py  trainable.py
src/tarp/model/layers/positional/: rotational.py
src/tarp/model/layers/universal/: activations.py  approximators.py
src/tarp/services/datasets/: __init__.py
src/tarp/services/datasets/classification/: __init__.py  multilabel.py
src/tarp/services/datasets/language/: masked.py
src/tarp/services/datasets/metric/: triplet.py
src/tarp/services/datasource/: sequence.py
src/tarp/services/evaluation/: __init__.py
src/tarp/services/evaluation/classification/: multilabel.py
src/tarp/services/evaluation/losses/: multilabel.py
src/tarp/services/preprocessing/augmentation/: __init__.py  nucleotide.py  protein.py
src/tarp/services/tokenizers/: __init__.py
src/tarp/services/tokenizers/pretrained/: character.py  dnabert.py  esm1b.py  monomer.py
src/tarp/services/tokenizers/untrained/: __init__.py
src/tarp/services/training/: context.py  state.py
src/tarp/services/training/callbacks/: __init__.py  meta.py  monitoring.py
src/tarp/services/utilities/: seed.py
src/tarp/utilities/: operations.py  timer.py
tests/model/layers/: rope.py  test_fftNconvolve.py  test_fftconvolve.py  test_pooling.py  test_rope.py
(+15 files in other folders)
