[project]
name = "tarp"
version = "0.1.0"
description = "TARP - A deep learning tool for predicting antimicrobial resistance from nucleotide sequences"
authors = [{ name = "Joel Jacob", email = "j7.jacob@hdr.qut.edu.au" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"

dependencies = [
    "pandas",       # Backwards compatibility for users who haven't switched to polars
    "polars",       # Data manipulation
    "numpy",        # Numerical operations
    "scikit-learn", # Machine learning utilities
    "torch",        # Deep learning
    "transformers", # Pre-trained models and tokenizers
    "tokenizers",   # Efficient tokenization
    "tqdm",         # Progress bars
    "plotly",       # Interactive visualizations
    "pyarrow",      # Efficient data storage and retrieval
    "scipy",        # Scientific computing
    "einops",       # Tensor operations
    "biopython",    # Biological sequence handling
    "safetensors",  # Safe and efficient model storage
    "ipykernel",    # Jupyter notebook support
    "nbformat",     # Jupyter notebook support
    "ipywidgets",   # Jupyter notebook support
    "umap-learn",   # Dimensionality reduction
    "orfipy",       # ORF prediction
]

[project.scripts]
tarp = "tarp.app:main"
train = "tarp.entry.train:main"

[project.urls]
Repository = "https://github.com/debugst1ck/TARP"
Issues = "https://github.com/debugst1ck/TARP/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["temp*", "tests*"]

[project.optional-dependencies]
dev = ["black", "ruff", "pytest"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "myst-parser"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
